<resources>
    <string name="app_name">Gestion de profile</string>


    <!-- button -->
    <string name="button_yes">Oui</string>
    <string name="button_no">Non</string>
    <string name="button_cancel">Retour</string>
    <string name="button_validate">Valider</string>
    <string name="button_got_it">Compris</string>

    <!-- Login -->
    <string name="info_or">ou</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_redirection_sign_up">S\'inscrire ?</string>
    <string name="action_password_forgot">Mot de passe oublié ?</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="sucess_email_sent">Un email vous à été envoyé</string>
    <string name="error_invalid_email">L\'adresse email est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_empty_password">Le mot de passe est requis</string>
    <string name="error_field_required">Ce champs est requis</string>
    <string name="error_network">Vérifier votre connexion internet</string>
    <string name="error_google_sign_in">Une erreur s\'est produite lors de la connexion à votre compte Google</string>
    <string name="error_facebook_sign_in">Une erreur s\'est produite lors de la connexion à votre compte Facebook</string>
    <string name="error_auth_failed">L\'identifiant ou le mot de passe est incorrect</string>
    <string name="error_forgot_password_failed">L\'adresse mail est inconnue</string>
    <string name="error_profil_empty">Renseignez votre profile !</string>

    <!-- SignUp -->
    <string name="info_sale_condition">En cliquant sur S\'inscire, vous accepter les Conditions d\'utilisation, la Politique de confidentialité et la Politique relative aux cookies de ChallEnge</string>
    <string name="prompt_lastname">Nom</string>
    <string name="prompt_firstname">Prenom</string>
    <string name="prompt_male">Homme</string>
    <string name="prompt_female">Femme</string>
    <string name="prompt_gender">Femme</string>
    <string name="prompt_birthday">Date de naissance</string>
    <string name="prompt_description">Présentez-vous!</string>
    <string name="action_sign_up">S\'inscrire</string>
    <string name="action_sign_up_short">Inscription</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_profil">ProfilActivity</string>

    <!-- Permission -->
    <string name="permission_camera">Veuillez permettre à Challenge d\'acceder à votre caméra</string>
    <string name="permission_title">Permissions necessaires</string>
    <string name="permission_file">Veuillez permettre à Challenge d\'acceder à vos dossiers</string>

    <!-- boite de dialogue -->
    <string name="picture_take_photo">Prendre une photo</string>
    <string name="picture_file">Choisir un fichier</string>
    <string name="picture_library">Depuis la librarie</string>
    <string name="picture_cancel">Annuler</string>
    <string name="picture_title">Changer la photo de profile:</string>
    <string name="picture_permission_denied">Vous n\'avez pas autorisé l\'application</string>

</resources>
